git pod에 맞춰 수정

--- a/member/src/main/resources/application.properties
+++ b/member/src/main/resources/application.properties
@@ -22,8 +22,8 @@ server.session.cookie.domain=jaceshim.com
 server.session.cookie.http-only=true
 server.session.cookie.path=/
 
-spring.redis.host=${REDIS_PORT_6379_TCP_ADDR:localhost}
-spring.redis.port=${REDIS_PORT_6379_TCP_PORT:6379}
+spring.redis.host=localhost
+spring.redis.port=6379
 
 kafka.bootstrap.servers=localhost:9092
 kafka.member.topic=member-event-topic
