--- a/member/build.gradle
+++ b/member/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     // for kafka
     compile('org.springframework.kafka:spring-kafka:1.1.3.RELEASE')
 
-    compile('mysql:mysql-connector-java:5.1.31')
+    compile('mysql:mysql-connector-java:8.0.29')
+    //compile('mysql:mysql-connector-java:5.1.31')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
