--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.session.store-type=REDIS
 server.session.timeout=5
 
-spring.redis.host=${REDIS_PORT_6379_TCP_ADDR:localhost}
-spring.redis.port=${REDIS_PORT_6379_TCP_PORT:6379}
+spring.redis.host=localhost
+spring.redis.port=6379
 
 kafka.bootstrap.servers=localhost:9092
 kafka.order.topic=order-event-topic
